# clocker

./: Cargo.toml
migrations/2022-10-02-194111_inout/: down.sql  up.sql
migrations/2022-10-03-070041_entries/: down.sql  up.sql
migrations/2022-10-03-112940_working_hours/: down.sql  up.sql
migrations/2022-10-03-124508_blocked/: down.sql  up.sql
migrations/2022-10-13-192528_better_working_hours/: down.sql  up.sql
src/: cli.rs  db.rs  main.rs  schema.rs
src/commands/: balance.rs  block.rs  clock_in.rs  clock_out.rs  mod.rs  set_hours.rs
src/model/: blocked.rs  entry.rs  hours.rs  mod.rs
