[package]
name = "clocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0" 
chrono = "0.4"
diesel = {version = "2.0", features= ["sqlite"]}
dotenvy = "0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"